[package]
name = "rust-rm"
description = "A modern alternative to the rm(1) command"
license = "Apache-2.0"
authors = ["Eric Cornelissen <ericornelissen@gmail.com>"]
repository = "https://github.com/ericcornelissen/rust-rm"
keywords = ["cli", "rm", "trash"]
categories = ["development-tools", "filesystem"]
edition = "2021"

[features]
default = ["gnu-mode", "trash"]

## Build features
# Include support for the RUST_RM_GNU_MODE environment variable
gnu-mode = []
# Include support for the --trash CLI option
trash = ["dep:trash"]

## Test-only features
# Used for running dangerous tests conditionally.
test-dangerous = []
# Used for running tests involving symbolic links conditionally (Windows only).
test-symlink = []
# Used for running test that move things to the trash conditionally.
test-trash = []

[dependencies]
anstream = "0.6.14"
clap = { version = "4.5.8", features = ["derive"] }
log = "0.4.21"
owo-colors = "4.0.0"
trash = { version = "5.0.0", optional = true }

[dev-dependencies]
assert_cmd = { version = "2.0.16", features = ["color-auto"] }
assert_fs = "1.1.1"
predicates = "3.1.0"
proptest = "1.5.0"
proptest-attr-macro = "1.0.0"
proptest-derive = "0.4.0"

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(tarpaulin_include)'] }

[profile.release]
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
strip = "debuginfo"

[package.metadata.cargo-all-features]
denylist = ["test-dangerous", "test-symlink", "test-trash"]
